--- a/.github/workflows/update_prices.yml
+++ b/.github/workflows/update_prices.yml
@@ -1,5 +1,5 @@
 name: Get Player Prices Data
-# 
+
 on:
   push:
   schedule:
@@ -36,7 +36,7 @@ jobs:
 
     - id: install-packages
       name: Install Python Dependencies
-      run: python -m pip install --upgrade -r ./requirements.txt
+      run: python -m pip install --upgrade -r ./fpl_utils/ci_cd_requirements.txt
 
     - id: run-get-data
       name: Run transfer_collection.py
