--- a/.github/workflows/update_prices.yml
+++ b/.github/workflows/update_prices.yml
@@ -20,7 +20,7 @@ jobs:
         fetch-depth: 0
 
     - id: checkout-repo
-      name: Checkout automation_testing repo
+      name: Checkout mavericks repo
       uses: actions/checkout@v3
       with:
         repository: fpl-mavericks/analytics
