--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-matplotlib
-pandas
-seaborn
-streamlit
-plotly
-scikit-learn
+matplotlib==3.8.2
+pandas==2.2.0
+seaborn==0.13.2
+streamlit==1.31.0
+plotly==5.18.0
+scikit-learn==1.4.0
+requests==2.31.0
