--- a/.github/workflows/update_prices.yml
+++ b/.github/workflows/update_prices.yml
@@ -27,11 +27,11 @@ jobs:
         ref: main
         path: workflow
     
-    # - id: setup_python
-    #   name: Setup Python
-    #   uses: actions/setup-python@v2
-    #   with:
-    #     python-version: 3.8
+    - id: setup_python
+      name: Setup Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
 
     # - id: install-packages
     #   name: Install Python Dependencies
